// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkoutScreen header matches the completed snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#0E0F11",
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "off",
          "left": "off",
          "right": "off",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "flexShrink": 1,
                  "fontSize": 28,
                  "fontWeight": "500",
                }
              }
            >
              Week 6
              <Text
                style={
                  {
                    "color": "#6B7076",
                  }
                }
              >
                 Day 2
              </Text>
            </Text>
            <View
              accessibilityLabel="Completed"
              accessible={true}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#CDFF57",
                  "borderRadius": 14,
                  "height": 28,
                  "justifyContent": "center",
                  "width": 28,
                }
              }
              testID="workout-completed-check"
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={16}
                bbWidth={16}
                focusable={false}
                height={16}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={16}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={
                      {
                        "payload": 4280494858,
                        "type": 0,
                      }
                    }
                    strokeWidth={1.8}
                  >
                    <RNSVGPath
                      d="M5 12.5l4.5 4.5L19 7.5"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 17,
                "fontWeight": "400",
              }
            }
          >
            Tue, 15 Sep · Upper/lower
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <View
            accessibilityLabel="Mesocycle overview"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={13.5}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={13.5}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            accessibilityLabel="Workout menu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGCircle
                    cx={5.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={12}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={18.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Workout progress"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 100,
          }
        }
        accessible={true}
        style={
          {
            "backgroundColor": "#1E2125",
            "borderRadius": 2,
            "height": 4,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#CDFF57",
                "height": 4,
              },
              {
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <RCTScrollView
        automaticallyAdjustKeyboardInsets={true}
        contentContainerStyle={
          {
            "gap": 12,
            "paddingBottom": 24,
            "paddingTop": 10,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 20,
                    "flexDirection": "row",
                    "gap": 8,
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  },
                  {
                    "backgroundColor": "#292116",
                  },
                ]
              }
              testID="exercise-group-chip"
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 8,
                      "width": 8,
                    },
                    {
                      "backgroundColor": "#F0A537",
                    },
                  ]
                }
              />
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#F7D097",
                    },
                  ]
                }
              >
                Chest
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "backgroundColor": "#1A1C1F",
                    "borderColor": "#2A2D31",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "paddingBottom": 8,
                    "paddingHorizontal": 20,
                    "paddingTop": 12,
                  },
                  false,
                ]
              }
              testID="exercise-card-session-exercise-1"
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#F5F5F4",
                        "fontSize": 17,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Bench press
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                    }
                  }
                >
                  <View
                    testID="exercise-rir"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "borderRadius": 20,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "gap": 8,
                            "minHeight": 36,
                            "paddingHorizontal": 10,
                            "paddingVertical": 8,
                          },
                          {
                            "backgroundColor": "#1A1C1F",
                            "borderColor": "#2A2D31",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 12,
                              "fontWeight": "400",
                            },
                            {
                              "color": "#C9CDD2",
                            },
                          ]
                        }
                      >
                        2 RIR
                      </Text>
                    </View>
                  </View>
                  <View
                    accessibilityLabel="Bench press history"
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 18,
                          "height": 36,
                          "justifyContent": "center",
                          "width": 36,
                        },
                        {
                          "backgroundColor": "#1A1C1F",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight={20}
                      bbWidth={20}
                      focusable={false}
                      height={20}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 20,
                            "width": 20,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={20}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                              "stroke",
                              "strokeWidth",
                            ]
                          }
                          stroke={
                            {
                              "payload": 4291415506,
                              "type": 0,
                            }
                          }
                          strokeWidth={1.8}
                        >
                          <RNSVGPath
                            d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M4.5 4.5V9H9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M12 8v4l3 2"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WorkoutScreen header matches the live snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#0E0F11",
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "off",
          "left": "off",
          "right": "off",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "flexShrink": 1,
                  "fontSize": 28,
                  "fontWeight": "500",
                }
              }
            >
              Week 6
              <Text
                style={
                  {
                    "color": "#6B7076",
                  }
                }
              >
                 Day 2
              </Text>
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 17,
                "fontWeight": "400",
              }
            }
          >
            Tue, 15 Sep · Upper/lower
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <View
            accessibilityLabel="Mesocycle overview"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={13.5}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={13.5}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            accessibilityLabel="Workout menu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGCircle
                    cx={5.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={12}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={18.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Workout progress"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 40,
          }
        }
        accessible={true}
        style={
          {
            "backgroundColor": "#1E2125",
            "borderRadius": 2,
            "height": 4,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#CDFF57",
                "height": 4,
              },
              {
                "width": "40%",
              },
            ]
          }
        />
      </View>
      <RCTScrollView
        automaticallyAdjustKeyboardInsets={true}
        contentContainerStyle={
          {
            "gap": 12,
            "paddingBottom": 24,
            "paddingTop": 10,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 20,
                    "flexDirection": "row",
                    "gap": 8,
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  },
                  {
                    "backgroundColor": "#292116",
                  },
                ]
              }
              testID="exercise-group-chip"
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 8,
                      "width": 8,
                    },
                    {
                      "backgroundColor": "#F0A537",
                    },
                  ]
                }
              />
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#F7D097",
                    },
                  ]
                }
              >
                Chest
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "backgroundColor": "#1A1C1F",
                    "borderColor": "#2A2D31",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "paddingBottom": 8,
                    "paddingHorizontal": 20,
                    "paddingTop": 12,
                  },
                  false,
                ]
              }
              testID="exercise-card-session-exercise-1"
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#F5F5F4",
                        "fontSize": 17,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Bench press
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                    }
                  }
                >
                  <View
                    testID="exercise-rir"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "borderRadius": 20,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "gap": 8,
                            "minHeight": 36,
                            "paddingHorizontal": 10,
                            "paddingVertical": 8,
                          },
                          {
                            "backgroundColor": "#1A1C1F",
                            "borderColor": "#2A2D31",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 12,
                              "fontWeight": "400",
                            },
                            {
                              "color": "#C9CDD2",
                            },
                          ]
                        }
                      >
                        2 RIR
                      </Text>
                    </View>
                  </View>
                  <View
                    accessibilityLabel="Bench press history"
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 18,
                          "height": 36,
                          "justifyContent": "center",
                          "width": 36,
                        },
                        {
                          "backgroundColor": "#1A1C1F",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight={20}
                      bbWidth={20}
                      focusable={false}
                      height={20}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 20,
                            "width": 20,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={20}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                              "stroke",
                              "strokeWidth",
                            ]
                          }
                          stroke={
                            {
                              "payload": 4291415506,
                              "type": 0,
                            }
                          }
                          strokeWidth={1.8}
                        >
                          <RNSVGPath
                            d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M4.5 4.5V9H9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M12 8v4l3 2"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                  <View
                    accessibilityLabel="Bench press menu"
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 18,
                          "height": 36,
                          "justifyContent": "center",
                          "width": 36,
                        },
                        {
                          "backgroundColor": "#1A1C1F",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight={20}
                      bbWidth={20}
                      focusable={false}
                      height={20}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 20,
                            "width": 20,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={20}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                              "stroke",
                              "strokeWidth",
                            ]
                          }
                          stroke={
                            {
                              "payload": 4291415506,
                              "type": 0,
                            }
                          }
                          strokeWidth={1.8}
                        >
                          <RNSVGCircle
                            cx={5.5}
                            cy={12}
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            r={0.9}
                          />
                          <RNSVGCircle
                            cx={12}
                            cy={12}
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            r={0.9}
                          />
                          <RNSVGCircle
                            cx={18.5}
                            cy={12}
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            r={0.9}
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WorkoutScreen header matches the preview snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#0E0F11",
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "off",
          "left": "off",
          "right": "off",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F5F5F4",
                  "flexShrink": 1,
                  "fontSize": 28,
                  "fontWeight": "500",
                }
              }
            >
              Week 7
              <Text
                style={
                  {
                    "color": "#6B7076",
                  }
                }
              >
                 Day 3
              </Text>
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 17,
                "fontWeight": "400",
              }
            }
          >
            Upper/lower
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 10,
            }
          }
        >
          <View
            accessibilityLabel="Mesocycle overview"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={4}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={4}
                    y={13.5}
                  />
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={6.5}
                    rx={1.5}
                    width={6.5}
                    x={13.5}
                    y={13.5}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            accessibilityLabel="Workout menu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={4}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 18,
                  "height": 36,
                  "justifyContent": "center",
                  "width": 36,
                },
                {
                  "backgroundColor": "#1A1C1F",
                },
                false,
                false,
              ]
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291415506,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                >
                  <RNSVGCircle
                    cx={5.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={12}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                  <RNSVGCircle
                    cx={18.5}
                    cy={12}
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    r={0.9}
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Workout progress"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 0,
          }
        }
        accessible={true}
        style={
          {
            "backgroundColor": "#1E2125",
            "borderRadius": 2,
            "height": 4,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#CDFF57",
                "height": 4,
              },
              {
                "width": "0%",
              },
            ]
          }
        />
      </View>
      <RCTScrollView
        automaticallyAdjustKeyboardInsets={true}
        contentContainerStyle={
          {
            "gap": 12,
            "paddingBottom": 24,
            "paddingTop": 10,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 20,
                    "flexDirection": "row",
                    "gap": 8,
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  },
                  {
                    "backgroundColor": "#292116",
                  },
                ]
              }
              testID="exercise-group-chip"
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 8,
                      "width": 8,
                    },
                    {
                      "backgroundColor": "#F0A537",
                    },
                  ]
                }
              />
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#F7D097",
                    },
                  ]
                }
              >
                Chest
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "backgroundColor": "#1A1C1F",
                    "borderColor": "#2A2D31",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "paddingBottom": 8,
                    "paddingHorizontal": 20,
                    "paddingTop": 12,
                  },
                  false,
                ]
              }
              testID="exercise-card-session-exercise-1"
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#F5F5F4",
                        "fontSize": 17,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Bench press
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                    }
                  }
                >
                  <View
                    accessibilityLabel="Bench press history"
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 18,
                          "height": 36,
                          "justifyContent": "center",
                          "width": 36,
                        },
                        {
                          "backgroundColor": "#1A1C1F",
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight={20}
                      bbWidth={20}
                      focusable={false}
                      height={20}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 20,
                            "width": 20,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={20}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                              "stroke",
                              "strokeWidth",
                            ]
                          }
                          stroke={
                            {
                              "payload": 4291415506,
                              "type": 0,
                            }
                          }
                          strokeWidth={1.8}
                        >
                          <RNSVGPath
                            d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M4.5 4.5V9H9"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                          <RNSVGPath
                            d="M12 8v4l3 2"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#0E0F11",
                    "borderColor": "#2A2D31",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "gap": 10,
                    "marginBottom": 10,
                    "marginTop": 12,
                    "paddingHorizontal": 12,
                    "paddingVertical": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={17}
                  bbWidth={17}
                  focusable={false}
                  height={17}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 17,
                        "width": 17,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width={17}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4287271065,
                          "type": 0,
                        }
                      }
                      strokeWidth={1.8}
                    >
                      <RNSVGCircle
                        cx={12}
                        cy={12}
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                        r={8.5}
                      />
                      <RNSVGPath
                        d="M12 11v5M12 8h.01"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "strokeLinecap",
                            "strokeLinejoin",
                          ]
                        }
                        strokeLinecap={1}
                        strokeLinejoin={1}
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
                <Text
                  style={
                    {
                      "color": "#8A9099",
                      "fontSize": 15,
                    }
                  }
                >
                  Not programmed yet
                </Text>
              </View>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#6B7076",
                "fontSize": 15,
                "paddingTop": 10,
                "textAlign": "center",
              }
            }
          >
            Unlocks when you finish Week 6 Day 3
          </Text>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</RNCSafeAreaProvider>
`;
